--- a/packages/components/bolt-code-snippet/src/code-snippet.twig
+++ b/packages/components/bolt-code-snippet/src/code-snippet.twig
@@ -11,15 +11,15 @@
 {% set langOptions = schema.properties.lang.enum %}
 {% set lang = lang in langOptions ? lang : schema.properties.lang.default %}
 
-{% set colorThemeOptions = schema.properties.colorTheme.enum %}
-{% set colorTheme = colorTheme in colorThemeOptions ? colorTheme : schema.properties.colorTheme.default %}
+{% set syntaxOptions = schema.properties.syntax.enum %}
+{% set syntax = syntax in syntaxOptions ? syntax : schema.properties.syntax.default %}
 
 {% set classes = [
   baseClass
 ] %}
 
 {% set codeContent %}{% spaceless %}
-  <code class="{{ "#{baseClass}__code #{baseClass}__code--#{display}" }} nohighlight" is="shadow-root">{% block children %}{{ code }}{% endblock %}</code>
+  <code class="{{ "#{baseClass}__code #{baseClass}__code--#{display}" }} nohighlight" is="shadow-root">{% block children %}{{ content }}{% endblock %}</code>
 {% endspaceless %}{% endset %}
 
 
@@ -28,13 +28,13 @@
 <bolt-{{ componentName }}
   {% if display %} display="{{ display }}" {% endif %}
   {% if lang %} lang="{{ lang }}" {% endif %}
-  {% if colorTheme %} colorTheme="{{ colorTheme }}" {% endif %}
+  {% if syntax %} syntax="{{ syntax }}" {% endif %}
   bolt-component
 >
-  {% if display == "block" %}
-    <pre {{ attributes.addClass(classes) }}>{{ codeContent }}</pre>
-  {% elseif display == "inline" %}
+  {% if display == "inline" %}
     {{ codeContent }}
+  {% else %}
+    <pre {{ attributes.addClass(classes) }}>{{ codeContent }}</pre>
   {% endif %}
 </bolt-{{ componentName }}>
 
