--- a/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
+++ b/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
@@ -15,21 +15,20 @@
  * 1. This maps to the system UI font.
  * 2. This is for known system UI fonts & requires updates
  */
-$bolt-font-family--sans-fallback:
-  -apple-system, BlinkMacSystemFont, /* [1] */
-  'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', /* [2] */
-  'Helvetica Neue', sans-serif;
-$bolt-font-family--serif: 'Georgia', serif;
-$bolt-font-family--mono-fallback: monospace;
+$bolt-font-family--sans-fallback: -apple-system, BlinkMacSystemFont, /* [1] */
+                                  'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', /* [2] */
+                                  'Helvetica Neue', sans-serif;
+$bolt-font-family--serif:         'Georgia', serif;
+$bolt-font-family--mono-fallback:  monospace;
 
 
 /*
  * Custom web font stacks
  */
-$bolt-font-family--sans:  'Open Sans', 'Helvetica Neue', sans-serif;
+$bolt-font-family--sans:        'Open Sans', 'Helvetica Neue', sans-serif;
 $bolt-font-family--sans-subset: 'OpenSansSubset', 'Helvetica Neue', sans-serif;
-$bolt-font-family--serif: 'Georgia', serif;
-$bolt-font-family--mono:  'Courier New', monospace;
+$bolt-font-family--serif:       'Georgia', serif;
+$bolt-font-family--mono:         monospace, monospace;
 
 
 /*
@@ -47,8 +46,8 @@ $bolt-font-families: (
     ),
     bodySubset: (
       fallback-font: $bolt-font-family--sans-fallback,
-      custom-font: $bolt-font-family--sans-subset,
-      loaded-class: $bolt-fonts--subset-loaded-class
+      custom-font:   $bolt-font-family--sans-subset,
+      loaded-class:  $bolt-fonts--subset-loaded-class
     ),
     heading: (
       fallback-font: $bolt-font-family--sans-fallback,
