--- a/apps/pattern-lab/src/_patterns/02-components/code-snippet/00-code-snippet-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/code-snippet/00-code-snippet-docs.twig
@@ -2,13 +2,13 @@
 {% set code %}
 {% verbatim %}{% include "@bolt-components-code-snippet/code-snippet.twig" with {
   "display": "block",
-  "lang": "css",
+  "lang": "html",
   "code": "Some code snippet"
 } only %}{% endverbatim %}
 {% endset %}
 
 {% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-code-snippet/README.md'
+  "schema": schema,
+  "content": code,
+  "readmeFile": '@bolt-components-code-snippet/README.md'
 } only %}
