--- a/apps/pattern-lab/src/_patterns/02-components/code-snippet/05-code-snippet.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/code-snippet/05-code-snippet.twig
@@ -4,45 +4,39 @@
   Code snippet can be a block of code, and
   {% include "@bolt-components-code-snippet/code-snippet.twig" with {
     "display": "inline",
-    "lang": "css",
-    "code": "display"
+    "content": "display"
   } only %}
   is set to
   {% include "@bolt-components-code-snippet/code-snippet.twig" with {
     "display": "inline",
-    "lang": "css",
-    "code": "block"
+    "content": "block"
   } only %}
   by default.
 </p>
 {% embed "@bolt-components-code-snippet/code-snippet.twig" with {
   "display": "block",
-  "lang": "css",
-  "colorTheme": "dark"
+  "lang": "scss"
 } only %}
-  {% block children %}{% verbatim %}
-    display: block;
-    margin: 0 0 1.65rem 0;{% endverbatim %}{% endblock %}
+{% block children %}display: block;
+margin: 0 0 1.65rem 0;{% endblock %}
 {% endembed %}
 
 <p>
   Well, code snippet can also be inline like this
   {% include "@bolt-components-code-snippet/code-snippet.twig" with {
     "display": "inline",
-    "lang": "css",
-    "code": "display:inline;"
+    "lang": "scss",
+    "content": "display:inline;"
   } only %}
   when you set
   {% include "@bolt-components-code-snippet/code-snippet.twig" with {
     "display": "inline",
-    "lang": "css",
-    "code": "display"
+    "content": "display"
   } only %}
   to be
   {% include "@bolt-components-code-snippet/code-snippet.twig" with {
     "display": "inline",
-    "lang": "css",
-    "code": "inline"
+    "content": "inline"
   } only %}
   instead.
 </p>
