--- a/packages/components/bolt-code-snippet/src/code-snippet-syntax.scss
+++ b/packages/components/bolt-code-snippet/src/code-snippet-syntax.scss
@@ -7,6 +7,12 @@
  */
 code[class*="language-"],
 pre[class*="language-"] {
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
+  white-space: pre-wrap;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: break-word;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
