--- a/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
+++ b/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
@@ -19,7 +19,7 @@ $bolt-font-family--sans-fallback: -apple-system, BlinkMacSystemFont, /* [1] */
                                   'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', /* [2] */
                                   'Helvetica Neue', sans-serif;
 $bolt-font-family--serif:         'Georgia', serif;
-$bolt-font-family--mono-fallback:  monospace;
+$bolt-font-family--mono-fallback:  monospace, monospace;
 
 
 /*
