Text Component -- Added util param (adds util classes to parent custom element) & adjusted conditional classes

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -8,6 +8,7 @@
     letter-spacing="narrow"
     line-height="tall"
     quoted
+    util="width-1/2,display-block,display-none@lg,hover:height-full"
 >
   My awesome bolt - text component yo!
 </bolt-text>
