--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -92,7 +92,7 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
   &--spacing-narrow {
     letter-spacing: -0.1rem;
   }
-  &--spacing-regular {
+  &--spacing-normal {
     letter-spacing: normal;
   }
   &--spacing-wide {
