fix default chevron icon and polish up PL headline examples

--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -42,7 +42,7 @@
   url ? baseClass ~ "--link" : ""
 ] %}
 
-{% if url and icon != null and icon.name is not defined %}
+{% if url and icon is not defined %}
   {% set icon = icon | default({}) | merge({
     name: "chevron-right"
   }) %}
