--- a/apps/pattern-lab/src/_patterns/02-components/headline/25-headline-icon-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/25-headline-icon-variations.twig
@@ -1,14 +1,51 @@
+<h3>Headline w/ Icon Position <code>before</code></h3>
 {% include "@bolt-components-headline/headline.twig" with {
-  text: "Headline Postfixed with Icon",
+  text: "What we do at Pega is brilliant!",
   icon: {
-    name: "search",
+    name: "arrow-left",
+    position: "before"
   }
 } only %}
+<br><br>
 
+
+<h3>Headline w/ Icon Position <code>after</code></h3>
 {% include "@bolt-components-headline/headline.twig" with {
-  text: "Headline Prefixed with Icon",
+  text: "What we do at Pega is brilliant!",
   icon: {
-    name: "search",
-    position: "before"
+    name: "chevron-right",
+    position: "after"
+  }
+} only %}
+<br><br>
+
+
+<h3>Headline w/ Default Icon Position</h3>
+{% include "@bolt-components-headline/headline.twig" with {
+  text: "What we do at Pega is brilliant!",
+  icon: {
+    name: "chevron-right"
+  }
+} only %}
+<br><br><br><br>
+
+<hr>
+
+<h3>Headline w/ <code>Left</code> Icon Position (Deprecated)</h3>
+{% include "@bolt-components-headline/headline.twig" with {
+  text: "What we do at Pega is brilliant!",
+  icon: {
+    name: "arrow-left",
+    position: "left"
+  }
+} only %}
+<br><br>
+
+<h3>Headline w/ <code>Right</code> Icon Position (Deprecated)</h3>
+{% include "@bolt-components-headline/headline.twig" with {
+  text: "What we do at Pega is brilliant!",
+  icon: {
+    name: "chevron-right",
+    position: "right"
   }
 } only %}
