chore: normalize font weight variations

--- a/apps/pattern-lab/src/styles/_docs.scss
+++ b/apps/pattern-lab/src/styles/_docs.scss
@@ -171,7 +171,7 @@ pre {
 }
 
 .c-bolt-docs__lead {
-  @include bolt-font-weight(regular);
+  @include bolt-font-weight(normal);
   border: 1px dotted transparent;
   border-radius: 4px;
   color: bolt-color(black);
