--- a/packages/components/bolt-headline/src/headline.scss
+++ b/packages/components/bolt-headline/src/headline.scss
@@ -89,7 +89,7 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 .c-bolt-subheadline {
   @include bolt-margin-bottom(medium);
   @include bolt-font-family(heading);
-  @include bolt-font-weight(regular);
+  @include bolt-font-weight(normal);
 
   &:not([class*='c-bolt-subheadline--']) {
     @include bolt-font-size(large);
