feat: update font-size mixin, add line-height mixin, add utility classes for font size and line height.

--- a/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
+++ b/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
@@ -34,6 +34,10 @@ $bolt-line-height--xsmall: 1.45;
 $bolt-line-height--tight: 1.111;
 
 
+$bolt-global-line-heights: (
+  regular,
+  tight
+);
 
 
 /// Bolt's definition of all options of possible text sizes.
@@ -94,3 +98,5 @@ $bolt-font-sizes: (
     )
   )
 );
+
+$bolt-global-font-sizes: map-get($bolt-font-sizes, 'font-sizes');
