--- a/packages/core/styles/02-tools/tools-font-size/_tools-font-size.scss
+++ b/packages/core/styles/02-tools/tools-font-size/_tools-font-size.scss
@@ -15,47 +15,26 @@
 /// @param {string} $leading
 ///   Defines the line-height of the text: regular or tight.
 ///
-@mixin bolt-font-size($size, $leading: regular) {
+@mixin bolt-font-size($size, $leading: regular, $important: null) {
+  @if $important == important {
+    $important: !important;
+  }
+
   $font-size: map-get-deep($bolt-font-sizes, 'font-sizes', $size, 'font-size');
 
   @if (type-of($font-size) == 'map') {
     $length: length(map-keys($font-size));
 
     @if ($length < 2) {
-      font-size: nth($font-size, 2);
+      font-size: nth($font-size, 2) $important;
     } @else {
-      @include bolt-poly-fluid-sizing('font-size', $font-size);
+      @include bolt-poly-fluid-sizing('font-size', $font-size, $important);
     }
   } @else {
-    font-size: $font-size;
+    font-size: $font-size $important;
   }
 
   @if ($leading != '' and  $leading != null) {
-    @if (type-of($leading) == number) {
-      $leading: $leading;
-    } @elseif (type-of($leading) == string) {
-      $leading: map-get-deep($bolt-font-sizes, 'font-sizes', $size, 'line-height', $leading);
-    }
-
-    @if (type-of($leading) == 'map') {
-      $length: length(map-keys($leading));
-
-      @if ($length < 2) {
-        line-height: nth($leading, 2);
-      } @else {
-        @debug $leading;
-        @include bolt-poly-fluid-sizing('line-height', $leading);
-      }
-    } @else {
-      line-height: $leading;
-    }
+    @include bolt-line-height($size, $leading, $important);
   }
 }
-
-/* stylelint-disable-next-line scss/at-mixin-pattern */
-@mixin font-size($args...) {
-  @warn 'PegaKit\'s `font-size` mixin is deprecated and will be removed in v1.0.0 of Bolt. Use the new @bolt-font-size mixin instead.';
-
-  @include bolt-font-size($args);
-}
-/* stylelint-enable */
