--- a/apps/pattern-lab/src/_patterns/02-components/icon/20-icon-name-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/icon/20-icon-name-variations.twig
@@ -1,15 +1,37 @@
 {% set schema = bolt.data.components['@bolt-components-icon'].schema %}
 
 {# loop through icons referenced in schema #}
-<ul class="bolt-icon-list-demo">
-{% for name in schema.properties.name.enum %}
-  <li>
-    {% include "@bolt-components-icon/icon.twig" with {
-      name: name,
-      background: "circle",
-      size: "large",
-    }%}
-    <br />{{ name }}
-  </li>
-{% endfor %}
-</ul>
+<ul class="o-bolt-bare-list">
+{% grid with {
+  tag: "ul",
+  attributes: {
+    class: [
+      "o-bolt-grid--flex",
+      "o-bolt-grid--center",
+      "o-bolt-grid--middle"
+    ]
+  }
+} %}
+  {% for name in schema.properties.name.enum %}
+    {% cell with {
+      tag: "li",
+      widths: [
+        "1/2",
+        "1/3@small",
+        "1/5@medium",
+        "1/8@xlarge",
+      ]
+    } %}
+      <div class="o-bolt-island o-bolt-island--small o-bolt-block o-bolt-block--center o-bolt-block--small">
+        <div class="o-bolt-block__image">
+          {% include "@bolt-components-icon/icon.twig" with {
+            name: name,
+            background: "circle",
+            size: "large",
+          }%}
+        </div>
+        <div class="o-bolt-block__body u-bolt-font-size-small u-bolt-line-height-small">{{ name }}</div>
+      </div>
+    {% endcell %}
+  {% endfor %}
+{% endgrid %}
