feat: update font loader to be wired up to font stack JS data

--- a/apps/pattern-lab/src/styles/_docs.scss
+++ b/apps/pattern-lab/src/styles/_docs.scss
@@ -343,3 +343,9 @@ pre {
   position: sticky;
   top: bolt-spacing(large);
 }
+
+
+// .foo {
+//   background: get('colors.secondary');
+//   @debug get('colors.secondary');
+// }
