--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -14,15 +14,22 @@
     <link rel="stylesheet" href="{{ assets["pl.css"] }}?cachebuster="{{ cacheBuster }}" media="all" />
 
 
+
     {# @TODO: wire this up to use Critical CSS #}
     <style>
       {{ inline("bolt-components-critical-fonts.css") }}
     </style>
 
-    {# @TODO: wire this up to use Critical JS #}
-    <script>
-      {{ inline("bolt-components-critical-fonts.js") }}
-    </script>
+
+
+    {% if bolt.data.config.prod == false %}
+      <script src="{{ assets["bolt-components-critical-fonts.js"] }}" async></script>
+    {% else %}
+      {# @TODO: wire this up to use Critical JS #}
+      <script>
+        {{ inline("bolt-components-critical-fonts.js") }}
+      </script>
+    {% endif %}
 
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
