Text Component -- Added url option to turn into link and css for reseting link styles

--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -56,6 +56,11 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
     padding: 0;
   }
 
+  a:link, a:visited {
+    color: inherit;
+    text-decoration: none;
+  }
+
   // Font Weight Options
   &--weight-semibold {
     @include bolt-font-weight(semibold);
