--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -11,16 +11,17 @@
     vspacing="xsmall"
     util="display-block, display-none@lg, hover:height-full"
     tag="h2"
+    url="http://bolt-design-system.com"
 >
   My awesome bolt - text component yo!
 </bolt-text>
 
 
-{#<bolt-text font-size="small" transform="uppercase" letter-spacing="wide" vspacing="xsmall" opacity>Eyebrow text here</bolt-text>#}
-{#<bolt-text font-size="xxxlarge" weight="bold" display="block" letter-spacing="narrow" vspacing="xsmall">This is Mike and Jake's awesome new XXXHeadline!</bolt-text>#}
-{#<bolt-text font-size="xxlarge" display="block" vspacing="xsmall">This is a subheadline</bolt-text>#}
-{#<bolt-text display="block" font-size="small" transform="uppercase" letter-spacing="wide" weight="bold" vspacing="small">This is a small headline</bolt-text>#}
-{#<bolt-text font-size="medium">Even more text will go here and this is just an exmaple for what is and what could be.</bolt-text>#}
+<bolt-text font-size="small" transform="uppercase" letter-spacing="wide" vspacing="xsmall" opacity>Eyebrow text here</bolt-text>
+<bolt-text font-size="xxxlarge" weight="bold" display="block" letter-spacing="narrow" vspacing="xsmall">This is Mike and Jake's awesome new XXXHeadline!</bolt-text>
+<bolt-text font-size="xxlarge" display="block" vspacing="xsmall">This is a subheadline</bolt-text>
+<bolt-text display="block" font-size="small" transform="uppercase" letter-spacing="wide" weight="bold" vspacing="small">This is a small headline</bolt-text>
+<bolt-text font-size="medium">Even more text will go here and this is just an exmaple for what is and what could be.</bolt-text>
 
 
 {#<bolt-text headline>Here is a headline</bolt-text>#}
