Text Component -- updated the opacity param to accept a range of specific numnbers, removed outer div wrapper from render since we are always providing a tag

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -17,7 +17,7 @@
 </bolt-text>
 
 
-<bolt-text font-size="small" transform="uppercase" letter-spacing="wide" vspacing="xsmall" opacity>Eyebrow text here</bolt-text>
+<bolt-text font-size="small" transform="uppercase" letter-spacing="wide" vspacing="xsmall" opacity="80">Eyebrow text here</bolt-text>
 <bolt-text font-size="xxxlarge" weight="bold" display="block" letter-spacing="narrow" vspacing="xsmall">This is Mike and Jake's awesome new XXXHeadline!</bolt-text>
 <bolt-text font-size="xxlarge" display="block" vspacing="xsmall">This is a subheadline</bolt-text>
 <bolt-text display="block" font-size="small" transform="uppercase" letter-spacing="wide" weight="bold" vspacing="small">This is a small headline</bolt-text>
