Text Component -- updated example to work with bolt-icon

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -7,13 +7,12 @@
     transform="uppercase"
     letter-spacing="narrow"
     line-height="regular"
-    quoted
     vspacing="xsmall"
     util="display-block, display-none@lg, hover:height-full"
     tag="h2"
     url="http://bolt-design-system.com"
 >
-  My awesome bolt - text component yo!
+  My awesome bolt - text component yo! <bolt-icon name="chevron-right"></bolt-icon>
 </bolt-text>
 
 
