feat: Allowing style vars to be overridden BDS-146 (#677)
* chore: setting scss vars defaults

* chore: adding deep merge JS util

* refactor: adding in the ability to specify global JS and Sass data to share across all Sass / JS code via the .boltrc config

* testing updated config

* styles: adding style overrides

* fix: js issues

* test: testing tweak to lint-staged config

* styles: redefine headline sizes

* styles: japanese headline sizes

* Disabling missing file for globalData

* Removing Japanese language implementation for Pattern Lab

Will add this in the Drupal theme as that is where it needs to get implemented.

--- a/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
+++ b/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
@@ -9,7 +9,7 @@
 
 // Unit on which all spacing is based
 $bolt-spacing-gutter: 2rem;
-$bolt-spacing-leading: 1.65;
+$bolt-spacing-leading: 1.65 !default;
 $bolt-spacing-squished: 0.5;
 $bolt-spacing-stretched: 1.5;
 
@@ -24,7 +24,7 @@ $bolt-spacing-values: (
   'large':   2,
   'xlarge':  4,
   'xxlarge': 8
-);
+) !default;
 @include export-data('spacing/scale.bolt.json', $bolt-spacing-values);
 
 $bolt-spacing-properties: (
