--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -1,28 +1,23 @@
 <bolt-text
     weight="bold"
-    font-style="italic"
     font-size="xxlarge"
     display="block"
     align="center"
     transform="uppercase"
     letter-spacing="narrow"
     line-height="regular"
-    vspacing="xsmall"
+    vspacing="xxlarge"
     util="display-block, display-none@lg, hover:height-full"
     tag="h2"
     url="http://bolt-design-system.com"
+    font-family="headline"
 >
   My awesome bolt - text component yo! <bolt-icon name="chevron-right"></bolt-icon>
 </bolt-text>
 
 
-<bolt-text font-size="small" transform="uppercase" letter-spacing="wide" vspacing="xsmall" opacity="80">Eyebrow text here</bolt-text>
-<bolt-text font-size="xxxlarge" weight="bold" display="block" letter-spacing="narrow" vspacing="xsmall">This is Mike and Jake's awesome new XXXHeadline!</bolt-text>
-<bolt-text font-size="xxlarge" display="block" vspacing="xsmall">This is a subheadline</bolt-text>
-<bolt-text display="block" font-size="small" transform="uppercase" letter-spacing="wide" weight="bold" vspacing="small">This is a small headline</bolt-text>
-<bolt-text font-size="medium">Even more text will go here and this is just an exmaple for what is and what could be.</bolt-text>
-
-
-{#<bolt-text headline>Here is a headline</bolt-text>#}
-{#<bolt-text subheadline>Here is a headline</bolt-text>#}
-{#<bolt-text eyebrow>Here is a headline</bolt-text>#}
+<br /><br />
+<bolt-text eyebrow>Here is an eyebrow</bolt-text>
+<bolt-text headline>Here is a headline</bolt-text>
+<bolt-text subheadline>This is a subheadline</bolt-text>
+<bolt-text>Even more text will go here and this is just an exmaple for what is and what could be.</bolt-text>
