--- a/packages/components/bolt-icon/src/icon.scss
+++ b/packages/components/bolt-icon/src/icon.scss
@@ -40,6 +40,7 @@ bolt-icon {
   z-index: bolt-z-index('content');
   color: inherit;
   color: var(--bolt-theme-icon, inherit);
+  pointer-events: none;
 
   // The primary goal of this is to set the transition for icon color.  Perhaps it's a
   // bit heavy-handed, but it seems more robust than just applying this to, say, 'path' elements.
