--- a/packages/components/bolt-icon/src/icon.scss
+++ b/packages/components/bolt-icon/src/icon.scss
@@ -26,13 +26,13 @@ bolt-icon {
 
 // By default, icons should inherit the size of the container it's put inside
 
-//Wrapper
+// Wrapper
 .c-bolt-icon {
   position: relative;
 }
 
 .c-bolt-icon__icon {
-  display: block; //required for vertically aligning icons
+  display: block; // required for vertically aligning icons
   position: relative;
   width: 1em;
   height: 1em;
@@ -43,9 +43,10 @@ bolt-icon {
 
   // The primary goal of this is to set the transition for icon color.  Perhaps it's a
   // bit heavy-handed, but it seems more robust than just applying this to, say, 'path' elements.
-  * {
-    transition: all $bolt-transition;
-  }
+  // [Mai] This messing up transition effects for links, it should not be used.
+  // * {
+  //   transition: all $bolt-transition;
+  // }
 }
 
 bolt-icon[size='small'],
