Text Component -- Added icon enhancements

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -1,23 +1,22 @@
 <bolt-text
     weight="bold"
     font-size="xxlarge"
-    display="block"
+    display="inline-block"
     align="center"
     transform="uppercase"
     letter-spacing="narrow"
     line-height="regular"
-    vspacing="xxlarge"
+    vspacing="large"
     util="display-block, display-none@lg, hover:height-full"
     tag="h2"
-    url="http://bolt-design-system.com"
     font-family="headline"
+
+    icon-name="download"
+    icon-background="circle"
+    icon-size="medium"
+    icon-color="blue"
+    icon-valign="center"
+    icon-align="before"
 >
-  My awesome bolt - text component yo! <bolt-icon name="chevron-right"></bolt-icon>
+  My awesome bolt - text component yo!
 </bolt-text>
-
-
-<br /><br />
-<bolt-text eyebrow>Here is an eyebrow</bolt-text>
-<bolt-text headline>Here is a headline</bolt-text>
-<bolt-text subheadline>This is a subheadline</bolt-text>
-<bolt-text>Even more text will go here and this is just an exmaple for what is and what could be.</bolt-text>
