Text Component -- Fixed issues when anchor tag wrapped set icon

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -1,7 +1,7 @@
 <bolt-text
     weight="bold"
     font-size="xxlarge"
-    display="inline-block"
+    display="block"
     align="center"
     transform="uppercase"
     letter-spacing="narrow"
@@ -9,14 +9,14 @@
     vspacing="large"
     util="display-block, display-none@lg, hover:height-full"
     tag="h2"
-    font-family="headline"
-
+    font-family="headline"\
     icon-name="download"
     icon-background="circle"
     icon-size="medium"
     icon-color="blue"
     icon-valign="center"
-    icon-align="before"
+    icon-align="after"
+    url="http://google.com"
 >
   My awesome bolt - text component yo!
 </bolt-text>
